# tmi-rs

./: .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: README.md  go.mod  go.sum  parse.rs
benches/dotnet/: ComparisonBenchmarks.cs  MiniTwitch.cs  Program.cs  TwitchLib.cs  libs-comparison.csproj
benches/go/: go.mod  go.sum  main_test.go
benches/rust/: parse.rs
examples/: anonymous.rs  basic.rs  client.rs  smoke.rs  tmi.rs  with_whitelist.rs
src/: bot.rs  client.rs  common.rs  conn.rs  irc.rs  lib.rs  macros.rs  msg.rs  scalar.rs  simd.rs  util.rs
src/client/: channel.rs  conn.rs  macros.rs  ratelimit.rs  read.rs  util.rs  write.rs
src/common/: channel.rs  unescaped.rs
src/irc/: channel.rs  command.rs  macros.rs  params.rs  prefix.rs  scalar.rs  simd.rs  tags.rs  wide.rs
src/irc/simd/: alternate.rs  arm_neon.rs  x86_sse.rs
src/irc/tags/: scalar.rs  simd.rs
src/irc/wide/: aarch64.rs  x86_64.rs
src/irc/wide/aarch64/: neon.rs
src/irc/wide/x86_64/: avx2.rs  avx512.rs  sse2.rs
src/msg/: clear_chat.rs  clear_msg.rs  global_user_state.rs  join.rs  macros.rs  notice.rs  part.rs  ping.rs  pong.rs  privmsg.rs  room_state.rs  scalar.rs  simd.rs  user_notice.rs  user_state.rs  whisper.rs
src/msg/simd/: alternate.rs  arm_neon.rs  x86_sse.rs
src/msg/snapshots/: tmi__msg__clear_chat__tests__parse_clearchat_ban.snap  tmi__msg__clear_chat__tests__parse_clearchat_clear.snap  tmi__msg__clear_chat__tests__parse_clearchat_timeout.snap  tmi__msg__clear_msg__tests__parse_clearmsg_action.snap  tmi__msg__clear_msg__tests__parse_clearmsg_basic.snap  tmi__msg__join__tests__parse_join.snap  tmi__msg__notice__tests__parse_notice_basic.snap  tmi__msg__part__tests__parse_join.snap  tmi__msg__pong__tests__parse_ping.snap  tmi__msg__privmsg__tests__parse_privmsg_action_and_badges.snap  tmi__msg__privmsg__tests__parse_privmsg_basic_example.snap  tmi__msg__privmsg__tests__parse_privmsg_custom_reward_id.snap  tmi__msg__privmsg__tests__parse_privmsg_display_name_with_middle_space.snap  tmi__msg__privmsg__tests__parse_privmsg_display_name_with_trailing_space.snap  tmi__msg__privmsg__tests__parse_privmsg_emote_non_numeric_id.snap  tmi__msg__privmsg__tests__parse_privmsg_emotes_1.snap  tmi__msg__privmsg__tests__parse_privmsg_korean_display_name.snap  tmi__msg__privmsg__tests__parse_privmsg_message_with_bits.snap  tmi__msg__privmsg__tests__parse_privmsg_pinned_chat.snap  tmi__msg__privmsg__tests__parse_privmsg_reply_parent_included.snap  tmi__msg__privmsg__tests__temp.snap.new  tmi__msg__room_state__tests__parse_room_state_basic_full.snap  tmi__msg__room_state__tests__parse_room_state_basic_full2.snap  tmi__msg__room_state__tests__parse_room_state_followers_non_zero.snap  tmi__msg__room_state__tests__parse_room_state_partial_1.snap  tmi__msg__room_state__tests__parse_room_state_partial_2.snap  tmi__msg__user_notice__tests__parse_anongiftpaidupgrade_with_promo.snap  tmi__msg__user_notice__tests__parse_anonsubgift.snap  tmi__msg__user_notice__tests__parse_anonsubmysterygift.snap  tmi__msg__user_notice__tests__parse_bitsbadgetier.snap  tmi__msg__user_notice__tests__parse_giftpaidupgrade_with_promo.snap  tmi__msg__user_notice__tests__parse_raid.snap  tmi__msg__user_notice__tests__parse_resub.snap  tmi__msg__user_notice__tests__parse_resub_no_share_streak.snap  tmi__msg__user_notice__tests__parse_ritual.snap  tmi__msg__user_notice__tests__parse_sub.snap  tmi__msg__user_notice__tests__parse_subgift_ananonymousgifter.snap  tmi__msg__user_notice__tests__parse_submysterygift.snap  tmi__msg__user_notice__tests__parse_submysterygift_ananonymousgifter.snap  tmi__msg__user_notice__tests__parse_user_notice_announcement.snap  (+32 more)
src/ps/: conn.rs  mod.rs  msg.rs
src/simd/: alternate.rs  arm_neon.rs  x86_sse.rs
src/tmi/: conn.rs  irc.rs  mod.rs  parse.rs  util.rs  write.rs
src/tmi2/: mod.rs
twitch_getters/: Cargo.toml  README.md
twitch_getters/src/: lib.rs
twitch_getters/tests/: test.rs
xtask/: .gitignore  Cargo.toml
xtask/src/: main.rs  task.rs  util.rs
xtask/src/task/: changelog.rs  setup.rs  test.rs
