[package]
name = "twitch"
version = "0.3.0"
authors = ["jprochazk <honza.spacir@gmail.com>"]
edition = "2021"
license = "MIT"

[features]
default = ["client"]

simd = []
client = [
  "dep:futures-util",
  "dep:rand",
  "dep:rustls-native-certs",
  "dep:tokio",
  "dep:tokio-rustls",
  "dep:tokio-stream",
  "dep:tracing",
]

[dependencies]
futures-util = { version = "0.3.28", optional = true }
rand = { version = "0.8.5", optional = true }
rustls-native-certs = { version = "0.6.3", optional = true }
tokio = { version = "1.28.2", optional = true, features = [
  "net",
  "rt",
  "signal",
  "time",
  "io-util",
] }
tokio-rustls = { version = "0.24.1", optional = true }
tokio-stream = { version = "0.1.14", optional = true, features = ["io-util"] }
tracing = { version = "0.1.37", optional = true }

[dev-dependencies]
twitch-irc = "5.0.0"
mimalloc = { version = "0.1.37", default-features = false }

criterion = "0.5.1"
pretty_assertions = "1.0.0"

futures-util = "0.3.28"
tokio = { version = "1.28.2", features = ["full"] }
tokio-tungstenite = "0.19.0"

[profile.bench]
lto = "fat"

[profile.release]
lto = "fat"

[lib]
bench = false

[[bench]]
name = "parse"
harness = false
