[package]
name = "twitch_getters"
version = "0.0.1"
authors = ["OptimalStrategy <17456182+OptimalStrategy@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "twitch_getters"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "1.0.64", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0"
